<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ilibici</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- NUESTRAS STRINGS  -->
    <string name="nocaben">There\'s no place for more bikes</string>
    <string name="nohay">There are no more bikes in this spot</string>
    <string name="existe">User already exists</string>
    <string name="wrong">Wrong username or password</string>
    <string name="pick">Pick up bike</string>
    <string name="soltar">Leave bike</string>
    <string name="info">App developed by the Actimel Team, by Jesús \'L\' Mena, Adrián \'Casei\' Mora, y Luís \'inmunitas\' Belzunce"</string>
    <string name="newUser">New user</string>
    <string name="cercanas">Close spots</string>
    <string name="about">About</string>
    <string name="cogerdejar">Pick up/Leave bike</string>
    <string name="name">Username</string>
    <string name="pass">Password</string>
    <string name="aceptar">OK</string>

</resources>
