<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4CFFFFFF" >
    
	<Button
        android:id="@+id/new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="115dp"
        android:text="@string/newUser" />

    <Button
        android:id="@+id/cercanos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/new_user"
        android:layout_alignBottom="@+id/new_user"
        android:layout_alignParentLeft="true"
        android:text="@string/cercanas" />

    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:text="@string/about" />

    <Button
        android:id="@+id/pick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/about"
        android:layout_alignBottom="@+id/about"
        android:layout_alignParentRight="true"
        android:text="@string/cogerdejar" />
    
    </RelativeLayout>
    
</RelativeLayout>
